--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,23 @@
-TO DO :
-database (done)
-dashboard (done)
-login (done)
+    User Workflows
 
-review -> button -> create
-order -> button -> Create
-payment -> button -> Create
+⏳ WAIT FOR ACCEPTANCE
+   │
+   ▼
+✅ FREELANCER ACCEPTS
+   │
+   ▼
+   📦 RECEIVE DELIVERY
+   │
+   ▼
+
+
+    Freelancer Workflow
+
+✅ ACCEPT ORDER
+   │
+   ▼
+   │
+   ▼
+✅ CLIENT APPROVES
+   │
+   ▼
